<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowtoPlay">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/open"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/press_start_2p"
            android:textColor="@color/title_color"
            android:textAlignment="center"
            android:textSize="30sp"/>


        <ScrollView
            android:layout_width="320dp"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="#982A4555"
                android:backgroundTint="#982A4555"
                android:orientation="vertical"
                android:padding="10dp">



                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/first_script"
                    android:textAlignment="textStart"
                    android:textColor="@color/script_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/second_script"
                    android:textAlignment="textStart"
                    android:textColor="@color/script_text"
                    android:textSize="17sp" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/third_script"
                    android:textAlignment="textStart"
                    android:textColor="@color/script_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/fourth_script"
                    android:textAlignment="textStart"
                    android:textColor="@color/script_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/last_script"
                    android:textAlignment="textStart"
                    android:textColor="@color/script_text"
                    android:textSize="17sp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/press_start_2p"
            android:backgroundTint="@color/title_color"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            app:cornerRadius="24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>