<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/open"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game"
                android:fontFamily="@font/press_start_2p"
                android:textColor="@color/title_color"
                android:textAlignment="center"
                android:textSize="60sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quote"
                android:fontFamily="@font/press_start_2p"
                android:textColor="@color/title_color"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:fontFamily="@font/press_start_2p"
                android:backgroundTint="@color/title_color"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="50dp"
                android:textSize="18sp"
                android:padding="10dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/btnLeaderboards"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/lead"
                android:fontFamily="@font/press_start_2p"
                android:backgroundTint="@color/title_color"
                android:textColor="@color/dark_gray"
                android:layout_marginBottom="50dp"

                android:textSize="18sp"
                android:padding="10dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/btnHelp"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:fontFamily="@font/press_start_2p"
                android:backgroundTint="@color/title_color"
                android:textColor="@color/dark_gray"
                android:layout_marginBottom="100dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:padding="10dp"
                app:cornerRadius="24dp"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>