<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardsActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/open"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lead"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/press_start_2p"
            android:textColor="@color/title_color"
            android:textAlignment="center"
            android:textSize="30sp"/>




            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="500dp"
                android:background="#982A4555"
                android:backgroundTint="#982A4555"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    >

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/view"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="@drawable/shape_circle"
                            />

                        <TextView
                            android:id="@+id/score1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/press_start_2p"
                            android:text="@string/score1"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"/>
                    </FrameLayout>

                    <TextView
                    android:id="@+id/player1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/player1"
                    android:textColor="@color/script_text"
                    android:textSize="22sp"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    >

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/view1"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="@drawable/shape_circle"
                            />

                        <TextView
                            android:id="@+id/score2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/press_start_2p"
                            android:text="@string/score2"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"/>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/player2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/press_start_2p"
                        android:text="@string/player2"
                        android:textColor="@color/script_text"
                        android:textSize="22sp"
                        android:layout_marginStart="15dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    >

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/view2"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="@drawable/shape_circle"
                            />

                        <TextView
                            android:id="@+id/score3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/press_start_2p"
                            android:text="@string/score3"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"/>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/player3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/press_start_2p"
                        android:text="@string/player3"
                        android:textColor="@color/script_text"
                        android:textSize="22sp"
                        android:layout_marginStart="15dp"
                        android:layout_gravity="center"/>

                </LinearLayout>







            </LinearLayout>


        <Button
            android:id="@+id/btnBack"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/back"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/press_start_2p"
            android:backgroundTint="@color/title_color"
            android:textColor="@color/dark_gray"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="15dp"

            android:padding="10dp"
            app:cornerRadius="24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>